[tool.poetry]
name = "transaction analysis"
version = "0.1.0"
description = ""
authors = ["Антонюк Евгений <38914583+AntonyukEvgeniy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
